2003-07-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.3.6 from emacs-w3m-1_3 branch.

2003-07-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-fml.el (shimbun-get-headers): Call
	`shimbun-create-header' instead of `shimbun-make-header'
	(shimbun-make-contents): Do not encode header attributes, to
	follow the change of shimbun header structure.

	* shimbun/shimbun.el (shimbun-header): New class.
	(shimbun-header-subject, shimbun-header-set-subject,
	shimbun-header-from, shimbun-header-set-from, shimbun-header-date,
	shimbun-header-set-date, shimbun-header-id, shimbun-header-set-id,
	shimbun-header-references, shimbun-header-set-references,
	shimbun-header-chars, shimbun-header-set-chars,
	shimbun-header-lines, shimbun-header-set-lines,
	shimbun-header-xref, shimbun-header-set-xref,
	shimbun-header-extra, shimbun-header-set-extra): Lunafied.
	(shimbun-header-normalize): New internal function.
	(shimbun-create-header): New function.
	(shimbun-make-header): Rewritten to use the above function.
	(shimbun-header-insert, shimbun-from-address): Follow the above
	changes.

	* w3m-e21.el (w3m-ccl-get-ucs-codepoint-with-emacs-unicode):
	Remove `translate-character'.
	(w3m-euc-japan-encoder, w3m-iso-latin-1-encoder): Select
	appropriate encoders when thie file is loaded.

	* w3m-ccl.el (w3m-ccl-write-repeat): Use a literal list of unibyte
	character sets, instead of calling `charset-bytes', in order to
	avoid difference between FSF Emacs and XEmacs.
	(w3m-euc-japan-encoder, w3m-iso-latin-1-encoder): Do not
	overwrite, if they have already been defined.

2003-07-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-examine-modules): Ignore w3m-ccl.el when
	XEmacs doesn't provide the mule feature.

2003-07-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-correct-charset-alist): New user option.
	(w3m-correct-charset): New inline macro.
	(w3m-detect-meta-charset): New function.